# gif.rs

./: Cargo.toml  README.md
assets/: id:000000,sig:04,src:000001,op:flip1,pos:817  id:000001,sig:04,src:000001,op:havoc,rep:128
examples/: main.rs
gif-afl/: Cargo.toml
gif-afl/src/: main.rs
gif-display-example/: Cargo.toml
gif-display-example/src/: main.rs
src/: lib.rs  lzw.rs  parser.rs
tests/: fuzzing-testcases.rs
