[package]
name    = "gif"
version = "0.0.1"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]

[dependencies]
nom     = "~0.2.0"

[dev-dependencies.glium_graphics]
git = "https://github.com/PistonDevelopers/glium_graphics"

[dev-dependencies.freetype-rs]
git = "https://github.com/PistonDevelopers/freetype-rs"

[dev-dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics"

[dev-dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"

[dev-dependencies.glium]
features = ["image", "gl_read_buffer"]
default_features = true
git = "https://github.com/tomaka/glium"

[dev-dependencies.glutin]
#git = "https://github.com/tomaka/glutin"

[dev-dependencies.image]
version = "0.3.1"
#git = "https://github.com/PistonDevelopers/image"
