[package]
name = "gif-afl"
version = "0.0.1"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]

[dependencies]
nom     = "~0.3.0"

[dependencies.gif]
path = ".."
version = "*"

[dependencies.afl-plugin]
git = "https://github.com/frewsxcv/afl.rs"

[dependencies.afl]
git = "https://github.com/frewsxcv/afl.rs"

